--- a/RDEvent/Views/Login/ForgotPassword.cshtml
+++ b/RDEvent/Views/Login/ForgotPassword.cshtml
@@ -6,6 +6,9 @@
 <center>
     <h1 Style="background-color: black;color:pink;"> Forgot Password </h1>
 </center>
+<br />
+<button onclick="location.href='@Url.Action("Login", "Login")';return false;" class="button">Back</button>
+<br />
 <body>
 
     @using (Html.BeginForm())
@@ -16,7 +19,7 @@
                 @ViewBag.Message
             </div>
             <div class="form-group">
-                <label class="control-label col-md-2">Email ID</label>
+                <label class="control-label col-md-2">Email</label>
                 @Html.TextBox("EmailID", "", new { @class = "form-control" })
             </div>
             <div class="form-group">
