--- a/RDEvent/Views/Login/NewPassword.cshtml
+++ b/RDEvent/Views/Login/NewPassword.cshtml
@@ -14,9 +14,7 @@
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-        <div class="text-danger">
-            @ViewBag.Message
-        </div>
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.NewPassword, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -42,8 +40,12 @@
         </div>
     </div>
 }
+<div class="text-danger">
+    @ViewBag.Message
+</div>
 <div>
-    @Html.ActionLink("Login", "Login")
+   
+     <div class="button" href="/Login/Login/"> Login</div> 
 </div>
 @section Scripts{
     <script src="~/Scripts/jquery.validate.min.js"></script>
