--- a/RDEvent/Views/Login/ResetPassword.cshtml
+++ b/RDEvent/Views/Login/ResetPassword.cshtml
@@ -1,12 +1,14 @@
 ﻿@model RDEvent.Models.ResetPassword
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <div class="text-danger">
+        <br/>
+        <br/>
+        <div class="alert-success">
             @ViewBag.Message
         </div>
         <hr />
@@ -32,16 +34,78 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Submit" class="btn btn-default" />
+                <input type="submit" value="Submit" class="button" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Login", "Login")
+  <center>  @Html.ActionLink("Login", "Login")</center>
 </div>
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<style>
+    * {
+        box-sizing: border-box
+    }
+
+    /* Add padding to containers */
+    .container {
+        padding: 16px;
+        align-content: center;
+    }
+
+    /* Full-width input fields */
+    input[type=text], input[type=password], form-control {
+        width: 30%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: inline-block;
+        border: groove;
+        background: #f1f1f1;
+        align-content: center;
+    }
+
+        input[type=text]:focus, input[type=password]:focus {
+            background-color: #ddd;
+            outline: none;
+        }
+
+    /* Overwrite default styles of hr */
+    hr {
+        border: 1px solid #f1f1f1;
+        margin-bottom: 25px;
+    }
+
+    /* Set a style for the submit/register button */
+    .button {
+        background-color: #000000;
+        color: white;
+        padding: 16px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 20%;
+        opacity: 0.9;
+    }
+
+    .loginbtn:hover {
+        opacity: 1;
+    }
+
+    /* Add a blue text color to links */
+    a {
+        color: dodgerblue;
+    }
+
+    /* Set a grey background color and center the text of the "sign in" section */
+    .signin {
+        background-color: #f1f1f1;
+        text-align: center;
+    }
+</style>
+
+
