--- a/RDEvent/Views/News/UserNews.cshtml
+++ b/RDEvent/Views/News/UserNews.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "User News";
 }
 
 
@@ -24,7 +24,7 @@
         </header>
         </center>
             <br />
-            <button onclick="location.href='@Url.Action("Index", "Home")';return false;" class="button">Back</button>
+            <button onclick="location.href='@Url.Action("Users", "Home")';return false;" class="button">Back</button>
             <br />
             <br />
             <center>
