--- a/RDEvent/Views/Register/VerifyAccount.cshtml
+++ b/RDEvent/Views/Register/VerifyAccount.cshtml
@@ -13,7 +13,7 @@
         <center>
             <br />
             <br />
-            <h2> Your Email verification is success..!</h2>
+            <h2> Your account has been verified..!</h2>
             <br />
             <br />
             <br />
