--- a/RDEvent/Views/Shared/_Layout.cshtml
+++ b/RDEvent/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<center><h1>Roller Derby Association NewZealand Incorporated</h1></center>
+<center><h1>Roller Derby Association of New Zealand Incorporated</h1></center>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -32,12 +32,7 @@
 
     </header>
    
-    <div class="background-image">
-        <div class="bg-image img1"> </div>
-        <div class="bg-image img2"> </div>
-
-        <div class="bg-text"> </div>
-    </div>
+   
     <div class="container body-content">
         @RenderBody()
     </div>
@@ -48,9 +43,9 @@
         </div>
         <div class="social-footer-middle">
             <ul>
-                <li> <a href="#"> About Us</a> </li>
-                <li> <a href="#"> Privacy Policy</a> </li>
-                <li> <a href="#"> Terms of Use</a> </li>
+                <li> <a color="White" href="/Home/AboutUs/"> About Us</a> </li>
+                <li> <a color="White" href="/Home/PrivacyPolicy/"> Privacy Policy</a> </li>
+                <li> <a color="White" href="/Home/TermsOfUse/"> Terms of Use</a> </li>
             </ul>
         </div>
         <div class="social-footer-icons">
@@ -63,6 +58,7 @@
             </ul>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <style>
+
                 .social-footer .social-footer-icons .fa:hover {
                     color: #4a4a4a;
                     transition: color 0.3s ease-in;
@@ -88,6 +84,17 @@
                     width: 50px;
                     height: 50px;
                 }
+        
+h1 {
+    font-size: 30px;
+}
+ li {
+                color: white;
+            }
+                a {
+                    color: dodgerblue;
+                }
+
             </style>
         </div>
     </footer>
