--- a/RDEvent/Views/Register/Registration.cshtml
+++ b/RDEvent/Views/Register/Registration.cshtml
@@ -5,13 +5,20 @@
 <center>
     <h1 Style="background-color: black;color:pink;"> Sign Up </h1>
 </center>
+<br />
+<button onclick="location.href='@Url.Action("Index", "Home")';return false;" class="button">Back</button>
+<br />
 @if (ViewBag.Status != null && Convert.ToBoolean(ViewBag.Status))
 {
     if (ViewBag.Message != null)
     {
-        <div class="alert alert-success">
-            <strong>Success!</strong>@ViewBag.Message
-        </div>
+        <center>
+            <div class="alert alert-success">
+                <h2>
+                    <strong>Success!</strong><br />@ViewBag.Message
+                </h2>
+            </div>
+        </center>
     }
 }
 else
@@ -49,9 +56,10 @@ else
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Submit" class="button" />
             </div>
         </div>
 
@@ -64,24 +72,14 @@ else
     }
 }
 
-<label>
-    <input type="checkbox" checked="checked" name="remember">  By proceeding you also agree to the terms of service and private policy
-</label>
+
 <br />
 <br />
 
-<center>
-    <p> <a href="~/Register/verification"> <div class="button"><center>Sign Up</center>  </div> </a></p>
 
-
-
-    <p><center>Or</center></p>
-
-    <p> <a href="https://www.google.com/account/about/"> <div class="button"> <center>Sign Up with Email</center> </div> </a> <br /></p>
-</center>
 <p>
     <center>
-        <strong>If you a existing user!</strong><a href="/Login/Index/">Click Here</a>.
+        <strong>If you are an existing user!</strong><a href="/Login/Login/">Click Here</a>.
     </center>
 </p>
 <br />
@@ -96,12 +94,12 @@ else
     }
 
     /* Full-width input fields */
-    input[type=text], input[type=password] {
+    input[type=text], input[type=password], input[type=email], form-control {
         width: 30%;
         padding: 15px;
         margin: 5px 0 22px 0;
         display: inline-block;
-        border: none;
+        border: groove;
         background: #f1f1f1;
     }
 
